--- a/reto_1/index.html
+++ b/reto_1/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box">BOX</div>
+    </div>
 </body>
 </html>
