--- a/reto_2/index.html
+++ b/reto_2/index.html
@@ -7,15 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="columns col-left">
-        <h1>titulo de la pagina</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor corporis inventore quibusdam voluptas laudantium!</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor corporis inventore quibusdam voluptas laudantium!</p>
-        </div>
-        <div class="columns col-right">
-        <img src="reto_2/img-worth_1.png" alt="" >
-        </div>
+    <div class="container" >
+    <div class="grilla" id="app">
     </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
